--- a/Qwen3_TTS_Clone.ipynb
+++ b/Qwen3_TTS_Clone.ipynb
@@ -12,8 +12,27 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "id": "H3eWSehOSZmZ",
+        "outputId": "e5707efb-a320-4cd8-b6ae-58470a1cc21d"
+      },
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "unindent does not match any outer indentation level (<tokenize>, line 288)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m288\u001b[0m\n\u001b[0;31m    demo.launch(share=True, debug=False)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+          ]
+        }
+      ],
       "source": [
-        "# ============================================\n",
+        " # ============================================\n",
         "# Qwen3-TTS — Clonagem de Voz com Interface em Português\n",
         "#\n",
         "# Modelo: Qwen3-TTS-12Hz-1.7B-Base\n",
@@ -21,9 +40,10 @@
         "# ============================================\n",
         "\n",
         "# ============================================\n",
-        "# CÉLULA 0: Configuração do ambiente\n",
+        "# CÉLULA 0: Montar Google Drive (obrigatória)\n",
         "# ============================================\n",
-        "# Este notebook salva perfis localmente (sessão do Colab) em /content.\n",
+        "from google.colab import drive\n",
+        "drive.mount(\"/content/drive\")\n",
         "\n",
         "# ============================================\n",
         "# CÉLULA 1: Instalação das dependências\n",
@@ -42,9 +62,9 @@
         "import shutil # Added for persistence\n",
         "\n",
         "# ============================================\n",
-        "# CÉLULA 3: Configuração da persistência (local)\n",
+        "# CÉLULA 3: Configuração da persistência (Google Drive)\n",
         "# ============================================\n",
-        "BASE_DIR = \"/content/qwen_tts_perfis\"\n",
+        "BASE_DIR = \"/content/drive/MyDrive/qwen_tts_perfis\"\n",
         "os.makedirs(BASE_DIR, exist_ok=True)\n",
         "\n",
         "# ============================================\n",
@@ -63,7 +83,7 @@
         "# CÉLULA 5: Funções de persistência de perfis\n",
         "# ============================================\n",
         "\n",
-        "def salvar_perfil_local(nome, audio_path, texto_ref, idioma):\n",
+        "def salvar_perfil_drive(nome, audio_path, texto_ref, idioma):\n",
         "    perfil_dir = os.path.join(BASE_DIR, nome)\n",
         "    os.makedirs(perfil_dir, exist_ok=True)\n",
         "\n",
@@ -81,7 +101,7 @@
         "        json.dump(meta, f, ensure_ascii=False, indent=2)\n",
         "    return f\"Perfil '{nome}' salvo com sucesso!\"\n",
         "\n",
-        "def carregar_perfis_local():\n",
+        "def carregar_perfis_drive():\n",
         "    perfis = {} # {nome: {\"audio_path\": ..., \"texto_ref\": ..., \"idioma\": ...}}\n",
         "\n",
         "    if not os.path.exists(BASE_DIR):\n",
@@ -114,7 +134,7 @@
         "    return perfis\n",
         "\n",
         "# Load profiles initially when the notebook runs\n",
-        "perfis_carregados = carregar_perfis_local()\n",
+        "perfis_carregados = carregar_perfis_drive()\n",
         "\n",
         "\n",
         "# ============================================\n",
@@ -175,7 +195,7 @@
         "            nome_novo_perfil = gr.Textbox(\n",
         "                label=\"Nome para Salvar Novo Perfil\",\n",
         "                placeholder=\"Ex: Voz do João, Voz da Maria...\",\n",
-        "                info=\"Este nome será usado para salvar o novo perfil localmente.\"\n",
+        "                info=\"Este nome será usado para salvar o novo perfil no Google Drive.\"\n",
         "            )\n",
         "            btn_salvar_perfil = gr.Button(\n",
         "                \"💾 Salvar Perfil Atual\",\n",
@@ -271,19 +291,19 @@
         "\n",
         "                try:\n",
         "                    # Attempt to save the profile\n",
-        "                    current_status_message = salvar_perfil_local(nome_do_perfil, audio_ref_path, texto_ref_input, idioma_input)\n",
+        "                    current_status_message = salvar_perfil_drive(nome_do_perfil, audio_ref_path, texto_ref_input, idioma_input)\n",
         "                    selected_dropdown_value = nome_do_perfil # Assume success for dropdown value\n",
         "                except Exception as e:\n",
         "                    return f\"❌ Erro ao salvar o perfil: {str(e)}\", gr.Dropdown.update(choices=updated_dropdown_choices, value=selected_dropdown_value)\n",
         "\n",
         "                # If saving was successful, try to reload profiles\n",
         "                try:\n",
-        "                    perfis_carregados = carregar_perfis_local()\n",
+        "                    perfis_carregados = carregar_perfis_drive()\n",
         "                    updated_dropdown_choices = list(perfis_carregados.keys())\n",
         "                except Exception as e:\n",
         "                    # If reloading fails, append this error to the success message\n",
         "                    current_status_message += f\"\\n⚠️ Atenção: Perfil salvo, mas houve um erro ao recarregar a lista de perfis: {str(e)}\"\n",
-        "                    # Ensure the newly saved profile is in the list of choices, even if carregar_perfis_local failed\n",
+        "                    # Ensure the newly saved profile is in the list of choices, even if carregar_perfis_drive failed\n",
         "                    if nome_do_perfil not in updated_dropdown_choices:\n",
         "                        updated_dropdown_choices.append(nome_do_perfil)\n",
         "                updated_dropdown_choices.sort() # Keep it sorted\n",
@@ -299,35 +319,7 @@
         "    # ============================================\n",
         "    # Inicialização da aplicação\n",
         "    # ============================================\n",
-        "    demo.launch(share=True, debug=False)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "H3eWSehOSZmZ",
-        "outputId": "ba887e0a-c7f7-4b8c-ad9a-981c26e37151"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m61.4/61.4 kB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.4/8.4 MB\u001b[0m \u001b[31m99.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.0/44.0 kB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m63.9/63.9 kB\u001b[0m \u001b[31m7.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m113.5/113.5 kB\u001b[0m \u001b[31m13.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.0/12.0 MB\u001b[0m \u001b[31m91.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m566.4/566.4 kB\u001b[0m \u001b[31m54.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m17.1/17.1 MB\u001b[0m \u001b[31m106.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Building wheel for flash-attn (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for sox (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
-          ]
-        }
+        "      demo.launch(share=True, debug=False)"
       ]
     }
   ],
@@ -336,6 +328,7 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
+      "authorship_tag": "ABX9TyNydwKwfqbIbJIJU35nrWgz",
       "include_colab_link": true
     },
     "kernelspec": {
